mod: quick modifications

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -6,17 +6,30 @@
 }
 
 .paragrafos {
-    text-align: left;
+    text-align: justify;
     display: flex;
+    position: center;
     width: 1500px;
     flex-wrap: wrap;
     margin-left: 120px;
     margin-top: 20px;
-    font-size: 23px;
+    font-size: 14px;
     padding: 30px;
 }
 
+.image-of-complex {
+    position: absolute;
+    margin-left: 450px;
+}
+
+
+.image-of-complex img {
+    width: 800px;
+    height: auto;
+}
+
+
 .paragrafos h2 {
-    font-size: 26px;
+    font-size: 18px;
 }
 
