--- a/css/style.css
+++ b/css/style.css
@@ -23,56 +23,6 @@ body {
     max-width: 200px;
 }
 
-.dropdown-menu {
-    position: relative;
-    display: inline-block;
-    margin-left: 30px;
-}
-
-.dropbtn {
-    background-color: #007bff; /* Cor de fundo azul */
-    color: white; /* Cor do texto */
-    border: none; /* Remove a borda padrão */
-    padding: 12px 16px; /* Espaçamento interno */
-    font-size: 16px; /* Tamanho da fonte */
-    cursor: pointer; /* Muda o cursor para indicar que é clicável */
-    border-radius: 5px; /* Arredonda os cantos */
-    transition: background-color 0.3s, box-shadow 0.3s; /* Transições suaves para cor e sombra */
-}
-
-.dropbtn:hover {
-    background-color: #0056b3; /* Cor de fundo azul escuro ao passar o mouse */
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Adiciona sombra ao passar o mouse */
-}
-
-.dropdown-content {
-    display: none; /* Oculta o menu inicialmente */
-    position: absolute;
-    background-color: #ffffff; /* Cor de fundo do menu */
-    min-width: 160px;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    border-radius: 5px; /* Arredonda os cantos do menu */
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: black; /* Cor do texto das opções */
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    border-bottom: 1px solid #ddd; /* Linha divisória entre opções */
-    transition: background-color 0.3s; /* Transição suave para a cor de fundo */
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1; /* Cor de fundo ao passar o mouse */
-}
-
-/* Exibir o menu dropdown ao passar o mouse sobre o menu */
-.dropdown-menu:hover .dropdown-content {
-    display: block;
-}
-
 #reload-btn {
     background: transparent;
     border: none;
@@ -228,7 +178,6 @@ body {
 }
 
 
-
 .btn-matutino {
     color: #fff;
     background-color: rgb(10, 106, 10);
@@ -244,9 +193,6 @@ body {
     background-color: rgb(84, 153, 179);
 }
 
-.tree-node-vespertino .tree-node-matutino {
-    display: none;
-}
 
 .node-link.setor:hover~.coordenadores .coordenador .gestao-estagiarios {
     background-color: #ccc;
@@ -261,14 +207,6 @@ body {
 
 .node-link.funcionario + .sub-funcionarios {
     display: none; /* Certifica que funcionários estão inicialmente ocultos */
-}
-
-/* Garantir que a grid se comporte como esperado */
-.funcionarios, .sub-funcionarios {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 colunas de igual tamanho */
-    gap: 10px; /* Espaçamento entre os itens */
-    width: 100%; /* Ocupa toda a largura disponível */
 }
 
 .funcionarios .tree-node, .sub-funcionarios .tree-node {
@@ -299,13 +237,6 @@ body {
     z-index: -1; /* Fica atrás dos outros elementos */
 }
 
-/* Garantir que a grid se comporte como esperado */
-.funcionarios, .sub-funcionarios {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 colunas de igual tamanho */
-    gap: 3px; /* Espaçamento entre os itens */
-    width: 100%; /* Ocupa toda a largura disponível */
-}
 
 .coordenadores {
     display: flex;
@@ -381,8 +312,6 @@ body {
 
 
 .tree li a .funcionarios {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr); /* Cria 4 colunas de tamanho igual */
         gap: 10px; /* Espaçamento entre os itens */
         margin-left: 500px;
         margin-top: 10px; /* Espaçamento superior opcional */
@@ -491,9 +420,17 @@ body {
     position: relative;
 }
 
+.tree-node-matutino .node-link,
+.tree-node-vespertino .node-link {
+    display: inline-block; /* Em vez de flex */
+    vertical-align: top;
+}
+
+
+
 .tree-node-matutino .tree-node-vespertino .parceiro-setor .tree-node-matutino .parceiro-setor .tree-node-vespertino {
     position: relative;
-    display: flex;
+    display: none;
     margin-top: 15px;
     margin-right: -10px;
 }
