feat: botao imprimir relaçao estagiarios

--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,47 @@ body {
     margin-left: 20px;
 }
 
+.botao-imprimir {
+    position: relative;
+    display: absolute;
+    margin-left: 465px;
+    margin-top: -42px;
+}
+
+.btn-imprimir {
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    top: 100%;
+    left: 0;
+}
+
+.dropdown-menu a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-menu a:hover {
+    background-color: #f1f1f1;
+}
+
+/* Mostrar o menu suspenso ao passar o mouse sobre o botão */
+.botao-imprimir:hover .dropdown-menu {
+    display: block;
+}
+
 
 .btn-matutino {
     color: #fff;
