--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,13 @@ body {
 
 #reload-btn {
     background: transparent;
+    position: absolute;
     border: none;
     font-size: 24px;
     cursor: pointer;
     margin-right: 10px;
+    margin-left: 600px;
+    margin-top: -40px;
     transition: color 0.3s ease;
 }
 
@@ -191,33 +194,97 @@ body {
     border-radius: 5px;
 }
 
-.dropdown-menu {
+
+.menu-hamburguer {
+    width: 30px;
+    margin-top: -10px;
+    margin-left: 30px;
+    position: absolute;
+    cursor: pointer;
+}
+
+.menu-hamburguer .linha {
+    width: 100%;
+    height: 4px;
+    background-color: #333;
+    margin: 5px 0;
+}
+
+/* Estilo do dropdown */
+.dropdown-hamburguer {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-hamburguer .dropdown-conteudo {
     display: none;
     position: absolute;
+    margin-left: 50px;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    top: 100%;
-    left: 0;
 }
 
-.dropdown-menu a {
+.dropdown-hamburguer:hover .dropdown-conteudo {
+    display: block;
+}
+
+.dropdown-hamburguer .dropdown-conteudo a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.dropdown-menu a:hover {
+.dropdown-hamburguer .dropdown-conteudo a:hover {
     background-color: #f1f1f1;
 }
 
-/* Mostrar o menu suspenso ao passar o mouse sobre o botão */
-.botao-imprimir:hover .dropdown-menu {
+/* Estilo dos submenus */
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu .submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-submenu:hover .submenu {
     display: block;
 }
 
+/* Estilo do menu de filtro */
+.filtro-menu {
+    display: none;
+    padding: 15px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    position: absolute;
+    top: 0;
+    left: 160px; /* Mudança na posição para evitar sobreposição */
+    width: 500px;
+    z-index: 1;
+}
+
+.filtro-menu input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+}
+
+.filtro-botoes {
+    display: flex;
+    justify-content: space-between;
+}
 
 .btn-matutino {
     color: #fff;
